<resources>
    <string name="app_name">오독오독</string>
    <string name="b_archive">B.archive</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">설정</string>
    <string name="title_my_library">나의 서재</string>
    <string name="title_community">Community</string>
    <string name="title_record">기록</string>
    <string name="title_statistics">통계</string>
    <string name="title_pick_book">책 고르기</string>
    <string name="title_search_book">책 검색</string>
    <string name="title_add_book">책 등록하기</string>
    <string name="title_add_card">카드 작성하기</string>
    <string name="title_get_text">텍스트 가져오기</string>
    <string name="title_photo_crop">카드 영역 지정하기</string>
    <string name="title_add_memo">메모 작성하기</string>
    <string name="title_delete">삭제</string>

    <string name="button_prev">이전</string>
    <string name="button_save">저장</string>
    <string name="button_next">다음</string>
    <string name="button_enroll">등록</string>

    <string name="select_background">1) 배경을 선택해 주세요.</string>
    <string name="input_pager_num">2) 페이지를 입력해 주세요.</string>
    <string name="input_content">3) 기록하고 싶은 문구를 입력해 주세요.</string>
    <string name="add_tags">4) 태그를 추가해 보세요. (선택사항)</string>
    <string name="hint_input_content">기록하고 싶은 책의 내용을 입력해 주세요.</string>

    <string name="hint_search_book">책을 검색해 보세요.</string>
    <string name="no_results_message">검색 결과가 없습니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_book_description">독서 진행도와 기억하고 싶은 문구를 기록할 수 있어요</string>
    <string name="empty_book_message">당신의 첫 번째 책을 추가해 보세요</string>
    <string name="search_book">책 검색하기</string>
</resources>