<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_library"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_my_library" />

    <item
        android:id="@+id/navigation_pick_book"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_pick_book" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_setting" />

</menu>