<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookchigibakchigi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bookchigibakchigi.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bookchigibakchigi.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my_library"
        android:name="com.example.bookchigibakchigi.ui.mylibrary.MyLibraryFragment"
        android:label="@string/title_my_library"
        tools:layout="@layout/fragment_my_library" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.bookchigibakchigi.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.bookchigibakchigi.ui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.bookchigibakchigi.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />



<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.bookchigibakchigi.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.bookchigibakchigi.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->
<!--    -->

</navigation>